--- a/views/index.erb
+++ b/views/index.erb
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Sinatra Hello World</title>
-  <style>
-  body {
-  	text-align: center;
-  	font-family: Tahoma, Geneva, sans-serif;
-  }
-  </style>
-</head>
-<body>
-  <h1>Hello, World!</h1>
-  <p>If you're seeing this, it means that you've got git, ruby, bundler, and sqlite working properly. Nice job!</p>
-  <p>Here is some example dynamic content: <em><%= Time.now.to_s %></em></p>
-</body>
-</html>
+<h1>Hello, World!</h1>
+<p>If you're seeing this, it means that you've got git, ruby, bundler, and sqlite working properly. Nice job!</p>
+<p>Here is some example dynamic content: <em><%= Time.now.to_s %></em></p>
+<p>You can see an example of using a loop in an ERB file at <a href="/99bottles">/99bottles</a></p>
