--- a/views/index.erb
+++ b/views/index.erb
@@ -4,11 +4,11 @@
   <div>
     <h3>Expense form</h3>
     <form method="post" actions="/">
-      <input type="number" name="amountx" placeholder="$"/>
-      <input type= "text" name="descriptionx" placeholder="Item Description" />
-      <input type= "date" name="datex" placeholder="Date" />
-      <input type= "tag" name="tagx" placeholder="Tag" />
-      <input type= "group" name="groupx" placeholder="Group" />
+      <input type="number" name="amount" placeholder="$"/>
+      <input type= "text" name="description" placeholder="Item Description" />
+      <input type= "date" name="date" placeholder="Date" />
+      <input type= "tag" name="tag" placeholder="Tag" />
+      <input type= "group" name="group" placeholder="Group" />
       <input type="submit" value="Submit" />
     </form>
 
