--- a/views/login.erb
+++ b/views/login.erb
@@ -1,4 +1,4 @@
-<h1>Login or Register</h1>
+<h1>Welcome to Project $. Please Login</h1>
 <div class="panel">
   <div class="panel-body">
     <h4 class="list-group-item-heading">Login:</h4>
@@ -14,20 +14,4 @@
   </div>
 </div>
 
-<div class="panel">
-  <div class="panel-body">
-    <h4 class="list-group-item-heading">Register:</h4>
-    <form action='/new_user' method='POST'>
-      <div class="form-group">
-        <input class="form-control" type='text' name='name' placeholder='username' />
-      </div>
-      <div class="form-group">
-        <input class="form-control" type="password" name="password" placeholder="password" />
-      </div>
-      <div class="form-group">
-        <input class="form-control" type="password" name="password_confirmation" placeholder="password confirmation" />
-      </div>
-      <button type='submit' class="btn btn-primary">Register</button>
-    </form>
-  </div>
-</div>
+<h4 class="list-group-item-heading">I don't have a login: <a style="text-decoration: underline" href='/signup'>Register</a></h4>
