--- a/views/message_page.erb
+++ b/views/message_page.erb
@@ -1,2 +1,3 @@
 <h1><%= @message %></h1>
+<a style="text-decoration: underline" href='/sign_up'>sign up</a>here for a new account.
 <a href="/" class="btn btn-default">Back</a>
