--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Multi-User Todo List</title>
+  <title>Project$</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel='stylesheet' type='text/css' href='/style.css'>
 </head>
 <body>
   <div class='container'>
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="col-md-6 ">
         <%= yield %>
       </div><!-- .col -->
     </div><!-- .row -->
