--- a/views/main_page.erb
+++ b/views/main_page.erb
@@ -1,42 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Project$</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel='stylesheet' type='text/css' href='/style.css'>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+
 <h1>Welcome <%= @user.name %> </h1>
+
 <div class="list-group">
   <h4>Income</h4>
-  <% @income_items.each do |thing1| %>
+  <% @income_items.each do |inc| %>
   <div class="list-group-item">
-    <a href='/delete_item/<%= thing1.id %>' class="btn btn-sm btn-default complete"><span class="glyphicon glyphicon-ok"> </span></a>
-    <%= thing1.amount_in %>
-    <%= thing1.from %>
-    <%= thing1.received_on %>
-    <%= thing1.tagged_to %>
-    <%= thing1.grouped_with %>
+    <a href='/delete_income_item/<%= inc.id %>' class="btn btn-sm btn-default complete"><span class="glyphicon glyphicon-ok"> </span></a>
+    <%= inc.amount_in %>
+    <%= inc.from %>
+    <%= inc.received_on %>
+    <%= inc.tagged_to %>
+    <%= inc.grouped_with %>
   </div>
   <% end %>
 </div>
-<div class="panel">
-  <div class="panel-body">
-    <h4 class="list-group-item-heading">Add an Income:</h4>
-    <form class="form-inline" action='/new_income' method='POST'>
-      <div class="form-group">
-        <input class="form-control" type='number' name='money' placeholder='$ Amount' />
-      </div>
-      <div class="form-group">
-        <input class="form-control" type='text' name='description' placeholder='Description' />
-      </div>
-    </div>
-    <div class="form-group">
-      <input class="form-control" type='date' name='received_on' placeholder='Date' />
-    </div>
-      <div class="form-group">
-        <input class="form-control" type='text' name='tag' placeholder='Tag' />
-      </div>
-      <div class="form-group">
-        <input class="form-control" type='text' name='group' placeholder='Group' />
-      </div>
-      <button type='submit' class="btn btn-primary">Save</button>
-    </form>
-  </div>
 </div>
+
+<div class="col-md-4">
+
+<div class="list-group">
+  <h4>Expense</h4>
+  <% @expense_items.each do |exp| %>
+  <div class="list-group-item">
+    <a href='/delete_expense_item/<%= exp.id %>' class="btn btn-sm btn-default complete"><span class="glyphicon glyphicon-ok"> </span></a>
+    <%= exp.amount_exp %>
+    <%= exp.from %>
+    <%= exp.received_on %>
+    <%= exp.tagged_to %>
+    <%= exp.grouped_with %>
+  </div>
+  <% end %>
+</div>
+
+</div>
+
+<h4 class="list-group-item-heading">Add New <a style="text-decoration: underline" href='/new_transaction'>Transaction</a></h4>
+
 <p>
   <a href="/logout" class="btn btn-default">logout</a>
   <a href="/delete_user" class="btn btn-danger">delete my account</a>
 </p>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
+</html>
