--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
 <body>
   <div class='container'>
     <div class="row">
-      <div class="col-md-6 ">
+      <div class="col-md-8 col-md-offset-2">
         <%= yield %>
       </div><!-- .col -->
     </div><!-- .row -->
