--- a/views/new_transaction.erb
+++ b/views/new_transaction.erb
@@ -1,3 +1,5 @@
+<h1>Add a new transaction </h1>
+
 <div class="panel">
   <div class="panel-body">
     <h4 class="list-group-item-heading">Add an Income:</h4>
@@ -21,7 +23,6 @@
       <button type='submit' class="btn btn-primary">Save</button>
     </form>
   </div>
-</div>
 
 <div class="panel">
   <div class="panel-body">
@@ -46,4 +47,18 @@
     <button type='submit' class="btn btn-primary">Save</button>
   </form>
 </div>
+
+<div class="panel">
+  <div class="panel-body">
+    <h4 class="list-group-item-heading">Add a Budget:</h4>
+    <form class="form-inline" action='/new_budget' method='POST'>
+      <div class="form-group">
+        <input class="form-control" type='number' name='bud_money' placeholder='$ Amount' />
+      </div>
+      <div class="form-group">
+        <input class="form-control" type='text' name='bud_description' placeholder='New Budget Name' />
+      </div>
+    </div>
+    <button type='submit' class="btn btn-primary">Save</button>
+  </form>
 </div>
