--- a/views/new_transaction.erb
+++ b/views/new_transaction.erb
@@ -12,11 +12,11 @@
       </div>
     </div>
     <div class="form-group">
-      <input class="form-control" type='date' name='received_on' placeholder='Date' />
+      <input class="form-control" type='date' name='date' placeholder='Date' />
     </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <input class="form-control" type='text' name='tag' placeholder='Tag' />
-      </div>
+      </div> -->
       <div class="form-group">
         <input class="form-control" type='text' name='group' placeholder='Link to Budget' />
       </div>
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="form-group">
-      <input class="form-control" type='date' name='exp_received_on' placeholder='Date' />
+      <input class="form-control" type='date' name='exp_date' placeholder='Date' />
     </div>
     <div class="form-group">
       <input class="form-control" type='text' name='exp_tag' placeholder='Tag' />
